; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/file-updater/file-updater/extr_file-updater.c_update_info_create_single.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/file-updater/file-updater/extr_file-updater.c_update_info_create_single.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.update_info = type { i32, i32, i8*, i32, i8*, i8*, i8* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@single_file_thread = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.update_info* @update_info_create_single(i8* %0, i8* %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca %struct.update_info*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %5
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  br label %15

15:                                               ; preds = %14, %5
  %16 = call %struct.update_info* @bzalloc(i32 48)
  store %struct.update_info* %16, %struct.update_info** %11, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = call i8* @bstrdup(i8* %17)
  %19 = load %struct.update_info*, %struct.update_info** %11, align 8
  %20 = getelementptr inbounds %struct.update_info, %struct.update_info* %19, i32 0, i32 6
  store i8* %18, i8** %20, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = call i8* @bstrdup(i8* %21)
  %23 = load %struct.update_info*, %struct.update_info** %11, align 8
  %24 = getelementptr inbounds %struct.update_info, %struct.update_info* %23, i32 0, i32 5
  store i8* %22, i8** %24, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = call i8* @bstrdup(i8* %25)
  %27 = load %struct.update_info*, %struct.update_info** %11, align 8
  %28 = getelementptr inbounds %struct.update_info, %struct.update_info* %27, i32 0, i32 4
  store i8* %26, i8** %28, align 8
  %29 = load i32, i32* %9, align 4
  %30 = load %struct.update_info*, %struct.update_info** %11, align 8
  %31 = getelementptr inbounds %struct.update_info, %struct.update_info* %30, i32 0, i32 3
  store i32 %29, i32* %31, align 8
  %32 = load i8*, i8** %10, align 8
  %33 = load %struct.update_info*, %struct.update_info** %11, align 8
  %34 = getelementptr inbounds %struct.update_info, %struct.update_info* %33, i32 0, i32 2
  store i8* %32, i8** %34, align 8
  %35 = load %struct.update_info*, %struct.update_info** %11, align 8
  %36 = getelementptr inbounds %struct.update_info, %struct.update_info* %35, i32 0, i32 1
  %37 = load i32, i32* @single_file_thread, align 4
  %38 = load %struct.update_info*, %struct.update_info** %11, align 8
  %39 = call i64 @pthread_create(i32* %36, i32* null, i32 %37, %struct.update_info* %38)
  %40 = icmp eq i64 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %15
  %42 = load %struct.update_info*, %struct.update_info** %11, align 8
  %43 = getelementptr inbounds %struct.update_info, %struct.update_info* %42, i32 0, i32 0
  store i32 1, i32* %43, align 8
  br label %44

44:                                               ; preds = %41, %15
  %45 = load %struct.update_info*, %struct.update_info** %11, align 8
  ret %struct.update_info* %45
}

declare dso_local %struct.update_info* @bzalloc(i32) #1

declare dso_local i8* @bstrdup(i8*) #1

declare !callback !2 dso_local i64 @pthread_create(i32*, i32*, i32, %struct.update_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
